syntax = "proto3";

option csharp_namespace = "PasswordManager";

import "google/protobuf/wrappers.proto";

package greet;

service PasswordStorageService {
  rpc AddAccount (AddAccountCommand) returns (AddAccountResult);
  rpc DeleteAccount (DeleteAccountCommand) returns (ServiceResponse);
  rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse);
  rpc GetAccountCredentials (GetAccountCredentialsRequest) returns (GetAccountCredentialsResult);
  rpc GetAccountsWithCredentials(GetAccountsRequest) returns (GetAccountsWithCredentialsResponse);
  rpc GetAccountByWebsiteNicknameAndUser (GetAccountByWebsiteNicknameAndUserRequest) returns (GetAccountByWebsiteNicknameAndUserResult);
  rpc ChangeManyAccountCredentials (ChangeManyAccountCredentialsCommand) returns (ServiceResponse);
}

message ChangeManyAccountCredentialsCommand {
  string user_id = 1;
  repeated ChangeAccountCredentialsCommand changes = 2;
}

message ChangeAccountCredentialsCommand {
  string account_id = 1;
  bytes credentials_hash = 2;
  bytes credentials_salt = 3;
}

message GetAccountByWebsiteNicknameAndUserRequest {
  string user_id = 1;
  string website_nickname = 2;
  string account_user = 3;
}

message GetAccountByWebsiteNicknameAndUserResult {
  ServiceResponse response = 1;
  AccountInfo account = 2;
}

message GetAccountCredentialsRequest {
  string user_id = 1;
  string account_id = 2;
}

message GetAccountCredentialsResult {
  ServiceResponse response = 1;
  bytes credentials_hash = 2;
  bytes credentials_salt = 3;
}

message GetAccountsRequest {
  int32 skip = 1;
  int32 limit = 2;
  string user_id = 3;
}

message GetAccountsResponse {
  ServiceResponse response = 1;
  repeated AccountInfo accounts = 2;
  bool has_next = 3;
}

message GetAccountsWithCredentialsResponse {
  repeated AccountWithCredentialsInfo accounts = 1;
  ServiceResponse response = 2;
  bool has_next = 3;
}

message DeleteAccountCommand {
  string account_id = 1;
  string user_id = 2;
}

message AddAccountCommand {
  string user = 1;
  string url = 2;
  string website_nickname = 3;
  bytes credentials_hash = 4;
  bytes credentials_salt = 5;
  string user_id = 6;
}

message AddAccountResult {
  ServiceResponse response = 1;
  google.protobuf.StringValue account_id = 2;
}

message AccountInfo {
  string user = 1;
  string url = 2;
  string website_nickname = 3;
  string account_id = 4;
}

message AccountWithCredentialsInfo {
  string user = 1;
  string url = 2;
  string website_nickname = 3;
  string account_id = 4;
  bytes credentials_hash = 5;
  bytes credentials_salt = 6;
}

message ServiceResponse {
  bool is_success = 1;
  Error error = 2;
}

message Error {
  google.protobuf.StringValue property = 1;
  string message = 2;
  ErrorStatusCode status_code = 3;
  repeated string meta = 4;
}

enum ErrorStatusCode {
  ErrorStatusCode_InternalServerError = 0;
  ErrorStatusCode_BadRequest = 1;
  ErrorStatusCode_Unauthorized = 2;
  ErrorStatusCode_NotFound = 3;
}